# py-webgl-transpiler

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Notes.md  README.md  pyproject.toml  stdio_translator.py  wasm_again.md  wasm_build.md
docker/wasm/: DOCKERFILE
scripts/: build.sh  setup.sh  shadertoy.py  test.py
src/angle_translator/: __init__.py  translator.py
src/angle_translator/wasm/: angle_shader_translator_standalone.wasm
stdio_shader_translator/: ANGLEShaderProgramVersion.h  angle_commit.h  base64.hpp  debug_wasm.cpp  shader_translator.cpp  system_utils_emscripten.cpp
tests/: test_translator.py
wasm_out/: angle_shader_translator_standalone.js  angle_shader_translator_standalone.wasm
