[project]
name = "py-webgl-transpiler"
version = "0.1.0"
authors = [
    { name = "Rich Insley", email = "richinsley@gmail.com" },
]
description = "A Python wrapper for the ANGLE shader translator, compiled to WASM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "wasmtime>=33.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/angle-translator-py"
"Bug Tracker" = "https://github.com/your-username/angle-translator-py/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
angle_translator = ["wasm/*.wasm"]